# catch2-examples

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: DefaultCompilerOptionsAndWarnings.cmake
src/catch2v3/multiple_test_files/: CMakeLists.txt  add.test.cpp  mul.test.cpp  sub.test.cpp
src/catch2v3/single_test_file_multiple_sources/: CMakeLists.txt  add.test.cpp  mul.test.cpp  sub.test.cpp
src/catch2v3/single_test_file_one_source/: CMakeLists.txt  tests.cpp
src/libtestee/: CMakeLists.txt  add.cpp  mul.cpp  sub.cpp
src/libtestee/include/: testee.hpp
src/single_header/multiple_test_files/: CMakeLists.txt  add.test.cpp  mul.test.cpp  sub.test.cpp
src/single_header/single_test_file_multiple_sources/: CMakeLists.txt  add.test.cpp  mul.test.cpp  sub.test.cpp
src/single_header/single_test_file_one_source/: CMakeLists.txt  tests.cpp
src/single_header_multiple_test_files/: CMakeLists.txt  main.cpp  sub.test.cpp
src/single_header_single_test_file/: CMakeLists.txt
src/single_header_single_test_file_multiple_sources/: CMakeLists.txt  mul.test.cpp
src/single_header_single_test_file_one_source/: CMakeLists.txt  main.cpp
