add_executable(single_header_single_test_file main.cpp)

set_target_properties(single_header_single_test_file PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(single_header_single_test_file PUBLIC cxx_std_20)
target_compile_options(single_header_single_test_file PRIVATE ${SANITIZER_FLAGS} ${DEFAULT_COMPILER_OPTIONS_AND_WARNINGS})
target_link_libraries(single_header_single_test_file PRIVATE ${SANITIZER_FLAGS} testee)

# Tests
add_executable(single_header_single_test_file_tests tests.cpp)

set_target_properties(single_header_single_test_file_tests PROPERTIES CXX_EXTENSIONS OFF OUTPUT_NAME tests)
target_compile_features(single_header_single_test_file_tests PUBLIC cxx_std_20)
target_compile_options(single_header_single_test_file_tests PRIVATE ${SANITIZER_FLAGS} ${DEFAULT_COMPILER_OPTIONS_AND_WARNINGS})
target_include_directories(single_header_single_test_file_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} include)
target_link_libraries(single_header_single_test_file_tests PRIVATE ${SANITIZER_FLAGS} testee)
